<resources>
    <string name="app_name">Foody</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="jokes">Jokes</string>
    <string name="lunching_floating_button">Lunching floating button</string>
    <string name="no_internet_emoji">No internet emoji</string>
    <string name="no_internet_connection">No Internet Connection.</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="image_for_details_of_recipe">Image for details of recipe</string>
    <string name="time_icon">Time Icon</string>
    <string name="likes_icon">Likes icon</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="image_for_ingridient">Image for ingridient</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save_to_favorites">Save to favorites</string>
    <string name="currently_you_don_t_have_any_favorites">Currently you don\'t have any favorites</string>
    <string name="delete_favorite_menu">Delete favorite menu</string>
    <string name="delete_all">Delete All</string>
</resources>